Fix: horizontal scroll

--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: row;
   gap: 18px;
+  flex-wrap: wrap;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) {
   .footer__column-links {
     flex-direction: column;
     gap: 32px;
