--- a/blocks/lead/__main-illustration/lead__main-illustration.css
+++ b/blocks/lead/__main-illustration/lead__main-illustration.css
@@ -1,7 +1,8 @@
 .lead__main-illustration {
   max-width: 1184px;
+  width: 100%;
   min-width: 320px;
-  max-height: calc((615/984) * (100vw - 96px)); /* У четырех разрешений одинаковое соотношение сторон высоты к ширине, поэтому можно не добавлять медиазапрос для каждого разрешения */
+  max-height: calc((615/984) * (100% - 96px)); /* У четырех разрешений одинаковое соотношение сторон высоты к ширине, поэтому можно не добавлять медиазапрос для каждого разрешения */
   min-height: 200px;
   box-sizing: border-box;
   margin: 64px auto 0;
@@ -20,7 +21,7 @@ figure {
 
 @media screen and (max-width: 768px) {
   .lead__main-illustration {
-    max-height: calc((615/984) * 100vw);
+    max-height: calc((615/984) * 100%);
   }
 }
 
